# dnse-morphe

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
.kilo/: kilo.jsonc
sdk/trading-api/: cancel_order.py  close_deal.py  create_trading_token.py  get_accounts.py  get_balances.py  get_deals.py  get_loan_packages.py  get_ohlc.py  get_order_detail.py  get_order_history.py  get_orders.py  get_ppse.py  get_security_definition.py  post_order.py  put_order.py  send_email_otp.py
src/dnse_morphe/: __init__.py  _async_client.py  _base_client.py  _client.py  _constants.py  _exception.py  _model.py  _response.py
src/dnse_morphe/_utils/: __init__.py  _compat.py  _datetime_parse.py  _logs.py  _proxy.py  _reflection.py  _resources_proxy.py  _streams.py  _sync.py  _transform.py  _typing.py  _utils.py
src/dnse_morphe/resources/: __init__.py  _accounts.py  _market_data.py  _orders.py  _websocket.py
src/dnse_morphe/types/: __init__.py  _account.py  _market.py  _order.py  _websocket.py
