[project]
name = "dnse-morphe"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.12.1",
    "distro>=1.9.0",
    "httpx>=0.28.1",
    "jiter>=0.13.0",
    "pydantic>=2.12.5",
    "sniffio>=1.3.1",
    "tqdm>=4.67.3",
    "typing-extensions>=4.15.0",
]
