[project]
name = "dnse-morphe"
version = "0.1.0"
description = "DNSE trading API library with REST and WebSocket support"
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.12.1",
    "distro>=1.9.0",
    "httpx>=0.28.1",
    "jiter>=0.13.0",
    "pydantic>=2.12.5",
    "sniffio>=1.3.1",
    "tqdm>=4.67.3",
    "typing-extensions>=4.15.0",
    "websockets>=14.0.0",
    "msgpack>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "mypy>=1.15.0",
    "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dnse_morphe"]

[tool.hatch.build.targets.sdist]
include = ["src/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/dnse_morphe"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __tracebackhide__:",
    "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_equality = true
warn_redundant_casts = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sdk.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "websockets.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "msgpack.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "T10",   # flake8-debugger
    "ISC",   # flake8-implicit-str-concat
    "PIE",   # flake8-pie
    "RET",   # flake8-return
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "RET505", # unnecessary assign before return statement
    "TC003",  # type-checking block moves (opinionated)
    "UP046",  # Generic uses type parameters (opinionated, requires 3.12+ syntax)
    "UP047",  # Generic function type params (opinionated)
    "DTZ005", # datetime.now without tz (opinionated for aware datetimes)
    "DTZ006", # datetime.fromtimestamp without tz (opinionated)
    "DTZ007", # datetime.strptime without tz (opinionated)
    "SIM102", # combine nested if (opinionated)
    "SIM105", # contextlib.suppress (opinionated)
    "SIM108", # ternary operator (opinionated)
    "B905",   # zip without strict (opinionated)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["S101", "ANN101", "ANN102", "T201"]
